# exogenousanalysis

./: DNAMSAFeatures.py  ExtractGeneNucleotideFromGenbankGenome.py  LongestCommonDNAFragment.py  extractconservedregions.py
aga-master-edit/: CMakeLists.txt  LICENSE.txt  ModificationNote.txt  README.md  aga_ssv_to_tablerecords.py
aga-master-edit/src/: Aga.cpp  Aga_orig.cpp  CMakeLists.txt  Cigar.cpp  Cigar.h  Genbank.cpp  Genbank.h  Genome.cpp  Genome.h  GenomeScorer.h  GlobalAligner.h  LocalAligner.h  LocalAlignments.h  NTSequence6AA.cpp  NTSequence6AA.h  SearchRange.cpp  SearchRange.h  SimpleScorer.cpp  SimpleScorer.h  SparseVector.h  SubstitutionMatrix.cpp  SubstitutionMatrix.h
aga-master-edit/src/libseq/: AASequence.cpp  AASequence.h  AminoAcid.cpp  AminoAcid.h  CMakeLists.txt  CodingSequence.cpp  CodingSequence.h  Codon.cpp  Codon.h  NTSequence.cpp  NTSequence.h  Nucleotide.cpp  Nucleotide.h  ParseException.h
